--- a/drivers/mmc/host/Kconfig
+++ b/drivers/mmc/host/Kconfig
@@ -714,3 +714,8 @@ config MMC_USHC
 
 	  Note: These controllers only support SDIO cards and do not
 	  support MMC or SD memory cards.
+
+config MACH_SDCC_BCM_DRIVER
+	bool "Modify a Qualcomm SDCC Controller issue on Broadcom driver"
+	depends on (MMC_MSM || MMC_MSM7X00A)
+	default n
