--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -505,4 +505,7 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
 CONFIG_ZSMALLOC=y
-
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+# CONFIG_CGROUP_MEM_RES_CTLR_SWAP_ENABLED is not set
+# CONFIG_CGROUP_MEM_RES_CTLR_KMEM is not set
