--- a/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
+++ b/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
@@ -38,9 +38,9 @@ CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8X60=y
 CONFIG_MACH_SEMC_FUJI=y
 CONFIG_MACH_SEMC_NOZOMI=y
-CONFIG_MACH_SEMC_NOZOMI_OC_NO=y
-# CONFIG_MACH_SEMC_NOZOMI_OC_STANDARD is not set
-# CONFIG_MACH_SEMC_NOZOMI_OC_ULTRA is not set
+# CONFIG_MACH_SEMC_NOZOMI_OC_NO is not set
+CONFIG_MACH_SEMC_NOZOMI_OC_STANDARD is not set
+# CONFIG_MACH_SEMC_NOZOMI_OC_ULTRA=y
 CONFIG_MSM7X00A_USE_DG_TIMER=y
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE=y
 CONFIG_MSM7X00A_IDLE_SLEEP_WAIT_FOR_INTERRUPT=y
