--- a/arch/arm/configs/fuji_nozomi_oc_defconfig
+++ b/arch/arm/configs/fuji_nozomi_oc_defconfig
@@ -96,6 +96,7 @@ CONFIG_CP_ACCESS=y
 CONFIG_CMDLINE="androidboot.hardware=semc androidboot.baseband=msm"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -513,3 +514,4 @@ CONFIG_CGROUP_MEM_RES_CTLR=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 # CONFIG_CGROUP_MEM_RES_CTLR_SWAP_ENABLED is not set
 # CONFIG_CGROUP_MEM_RES_CTLR_KMEM is not set
+CONFIG_DEFAULT_ROW=y
