--- a/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
+++ b/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
@@ -515,3 +515,8 @@ CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 # CONFIG_CGROUP_MEM_RES_CTLR_SWAP_ENABLED is not set
 # CONFIG_CGROUP_MEM_RES_CTLR_KMEM is not set
 CONFIG_DEFAULT_ROW=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1728000
+CONFIG_MSM_CPU_FREQ_MIN=192000
+CONFIG_SUSPEND=n
+CONFIG_HOTPLUG_CPU=n
