--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -326,6 +326,7 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_PMIC8XXX_FORCECRASH=y
 CONFIG_INPUT_BMA250_NG=y
+CONFIG_INPUT_BMA250_MOTION=y
 CONFIG_INPUT_AKM8972=y
 CONFIG_INPUT_APDS9702=y
 CONFIG_INPUT_SIMPLE_REMOTE=y
