fuji: enable KSM check page before scanning

--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -92,6 +92,7 @@ CONFIG_HIGHMEM=y
 CONFIG_VMALLOC_RESERVE=0x23200000
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
+CONFIG_KSM_CHECK_PAGE=y
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_CP_ACCESS=y
 CONFIG_CMDLINE="rdinit=/init.sh init=/init androidboot.hardware=semc androidboot.baseband=msm"
