--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -549,7 +549,7 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
-# CONFIG_MISC_FILESYSTEMS is not set
+CONFIG_F2FS_FS=y
 CONFIG_CIFS=y
 CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
