--- a/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
+++ b/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
@@ -96,6 +96,7 @@ CONFIG_HIGHMEM=y
 CONFIG_VMALLOC_RESERVE=0x23200000
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
+CONFIG_KSM_CHECK_PAGE=y
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_CP_ACCESS=y
 CONFIG_CMDLINE="rdinit=/init.sh init=/init androidboot.hardware=semc androidboot.baseband=msm"
@@ -332,6 +333,7 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_PMIC8XXX_FORCECRASH=y
 CONFIG_INPUT_BMA250_NG=y
+CONFIG_INPUT_BMA250_MOTION=y
 CONFIG_INPUT_AKM8972=y
 CONFIG_INPUT_APDS9702=y
 CONFIG_INPUT_SIMPLE_REMOTE=y
@@ -553,7 +555,7 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
-# CONFIG_MISC_FILESYSTEMS is not set
+CONFIG_F2FS_FS=y
 CONFIG_CIFS=y
 CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
