--- a/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
+++ b/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
@@ -96,7 +96,6 @@ CONFIG_HIGHMEM=y
 CONFIG_VMALLOC_RESERVE=0x23200000
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
-CONFIG_KSM_CHECK_PAGE=y
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_CP_ACCESS=y
 CONFIG_CMDLINE="rdinit=/init.sh init=/init androidboot.hardware=semc androidboot.baseband=msm"
@@ -255,7 +254,7 @@ CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
-CONFIG_CMA=n
+CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
