overclocking: OC Ultra set by default with factory frequencies. Up to 2GHz supported

--- a/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
+++ b/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
@@ -46,6 +46,9 @@ CONFIG_MACH_SEMC_NOZOMI=y
 # CONFIG_MACH_SEMC_NOZOMI_OC_NO is not set
 # CONFIG_MACH_SEMC_NOZOMI_OC_STANDARD is not set
 CONFIG_MACH_SEMC_NOZOMI_OC_ULTRA=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MIN=192000
 CONFIG_MSM7X00A_USE_DG_TIMER=y
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE=y
 CONFIG_MSM7X00A_IDLE_SLEEP_WAIT_FOR_INTERRUPT=y
