--- a/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
+++ b/arch/arm/configs/fuji_nozomi_oc_ultra_defconfig
@@ -582,3 +582,4 @@ CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 # CONFIG_CRYPTO_HW is not set
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_CPU_VOLTAGE_TABLE=y
