--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -710,6 +710,12 @@ config SEMC_ONESEG_TUNER_PM
 	help
 	  Select this module to enable SEMC Oneseg Tuner PM Driver.
 
+config UID_CPUTIME
+	tristate "Per-UID cpu time statistics"
+	default n
+	help
+	  Per UID based cpu time statistics exported to /proc/uid_cputime
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
