--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -712,7 +712,7 @@ config SEMC_ONESEG_TUNER_PM
 
 config UID_CPUTIME
 	tristate "Per-UID cpu time statistics"
-	default n
+	depends on PROFILING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
 
