fuji: enable GPU voltage control

--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -578,3 +578,4 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_AES_ARM=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_GPU_VOLTAGE_TABLE=y
