clearpad: introduce CONFIG_TOUCHSCREEN_CLEARPAD_WAKEUP
This patch will permit to disable the wakeup feature support to have a vanilla Sony driver

--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -326,6 +326,7 @@ CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_CLEARPAD=y
 CONFIG_TOUCHSCREEN_CLEARPAD_I2C=y
+CONFIG_TOUCHSCREEN_CLEARPAD_WAKEUP=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 CONFIG_INPUT_KEYCHORD=y
