clearpad/apds9702: proximity sensor and clearpad interaction to control touchscreen power state during standby

--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -331,6 +331,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_CLEARPAD=y
 CONFIG_TOUCHSCREEN_CLEARPAD_I2C=y
 CONFIG_TOUCHSCREEN_CLEARPAD_WAKEUP=y
+CONFIG_TOUCHSCREEN_PROXIMITY_INTERACTION=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 CONFIG_INPUT_KEYCHORD=y
