--- a/drivers/staging/zram/Kconfig
+++ b/drivers/staging/zram/Kconfig
@@ -1,6 +1,7 @@
 config ZRAM
 	tristate "Compressed RAM block device support"
-	depends on BLOCK && SYSFS && ZSMALLOC && CRYPTO=y
+	depends on BLOCK && SYSFS && CRYPTO=y
+	select ZSMALLOC
 	select CRYPTO_LZO
 	select CRYPTO_LZ4
 	default n
