zswap: select lz4 by default

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -436,6 +436,7 @@ config ZSWAP
 	bool "In-kernel swap page compression"
 	depends on FRONTSWAP && CRYPTO && !ZSMALLOC
 	select CRYPTO_LZO
+	select CRYPTO_LZ4
 	select ZSMALLOC_NEW
 	select ANDROID_LOW_MEMORY_KILLER_ADJUST_TASKSIZE if ANDROID_LOW_MEMORY_KILLER
 	default n
