fuji: enable ZSWAP and VNSWAP / Disable ZRAM

--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -2,6 +2,9 @@
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-oc"
 CONFIG_SWAP=y
+CONFIG_FRONTSWAP=y
+CONFIG_ZSWAP=y
+CONFIG_VNSWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
@@ -540,7 +543,7 @@ CONFIG_RTC_CLASS=y
 # CONFIG_RTC_DRV_MSM is not set
 CONFIG_RTC_DRV_PM8XXX=y
 CONFIG_STAGING=y
-CONFIG_ZRAM=y
+CONFIG_ZRAM=n
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
