fuji: support btrfs

--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -558,6 +558,8 @@ CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
+CONFIG_BTRFS_FS=y
+CONFIG_BTRFS_FS_POSIX_ACL=y
 CONFIG_CIFS=y
 CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
