--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -268,6 +268,7 @@ CONFIG_RAMDUMP_CRASH_LOGS=y
 CONFIG_SENSORS_MPU3050=y
 CONFIG_SENSORS_BMA250=y
 CONFIG_SENSORS_AKM8972=y
+CONFIG_UID_CPUTIME=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
