--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -256,6 +256,7 @@ CONFIG_SW_SYNC=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_AUTOSLEEP=y
+# CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
