--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-n"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
