defconfig: fix options for hikari and aoba

--- a/arch/arm/configs/fuji_aoba_defconfig
+++ b/arch/arm/configs/fuji_aoba_defconfig
@@ -42,12 +42,18 @@ CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8X60=y
 CONFIG_MACH_SEMC_FUJI=y
 CONFIG_MACH_SEMC_AOBA=y
-CONFIG_MSM7X00A_USE_DG_TIMER=y
+CONFIG_MSM7X00A_USE_GD_TIMER=y
+# CONFIG_MSM7X00A_USE_DG_TIMER is not set
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE=y
 CONFIG_MSM7X00A_IDLE_SLEEP_WAIT_FOR_INTERRUPT=y
 # CONFIG_MSM_FIQ_SUPPORT is not set
 # CONFIG_MSM_PROC_COMM is not set
 CONFIG_MSM_SMD=y
+CONFIG_MSM_SDIO_DMUX=y
+CONFIG_MSM_SDIO_TTY=y
+CONFIG_MSM_SDIO_CMUX=y
+CONFIG_MSM_SDIO_CTL=y
+CONFIG_MSM_SDIO_SMEM=y
 # CONFIG_MSM_RESET_MODEM is not set
 # CONFIG_MSM_SMD_NMEA is not set
 # CONFIG_MSM_SMD_QMI is not set
@@ -93,7 +99,7 @@ CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_CP_ACCESS=y
-CONFIG_CMDLINE="rdinit=/init.sh init=/init androidboot.hardware=semc androidboot.baseband=msm"
+CONFIG_CMDLINE="rdinit=/init.sh init=/init androidboot.hardware=semc androidboot.baseband=csfb"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX=y
@@ -261,6 +267,8 @@ CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
+CONFIG_TSIF=y
+CONFIG_TSIF_CHRDEV=y
 CONFIG_PMIC8XXX_VIBRATOR=y
 CONFIG_PMIC8XXX_NFC=y
 CONFIG_PMIC8XXX_UPL=y
@@ -312,6 +320,7 @@ CONFIG_PPP_SYNC_TTY=y
 CONFIG_SLIP=y
 CONFIG_SLIP_COMPRESSED=y
 CONFIG_SLIP_MODE_SLIP6=y
+CONFIG_MSM_RMNET_SDIO=y
 CONFIG_USB_USBNET=y
 CONFIG_MSM_RMNET_USB=y
 CONFIG_WIFI_CONTROL_FUNC=y
@@ -364,7 +373,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MSM is not set
 CONFIG_BATTERY_BQ27520_SEMC=y
 CONFIG_BATTERY_BQ27520_SEAL_FW=y
-CONFIG_CHARGER_BQ24185=y
+CONFIG_CHARGER_BQ24160=y
 CONFIG_BATTERY_CHARGALG=y
 CONFIG_BATTERY_SEMC_ARCH=y
 CONFIG_SENSORS_MSM_ADC=y
@@ -515,6 +524,7 @@ CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CSVT=y
 CONFIG_USB_EHSET_TEST_FIXTURE=y
 CONFIG_USB_GADGET=y
+CONFIG_USB_NCP373=y
 CONFIG_SUPPORT_ALIEN_USB_CHARGER=y
 CONFIG_USB_MSM_72K=y
 CONFIG_USB_G_ANDROID=y
@@ -533,9 +543,13 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK_MINORS=32
 # CONFIG_MMC_BLOCK_BOUNCE is not set
 CONFIG_MMC_MSM=y
+CONFIG_MMC_MSM_CARD_HW_DETECTION=y
 CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT=y
-# CONFIG_MMC_MSM_SDC2_SUPPORT is not set
+CONFIG_MMC_MSM_SDC2_8_BIT_SUPPORT=y
+CONFIG_MMC_MSM_SDC3_SUPPORT=y
+CONFIG_MMC_MSM_SDC3_8_BIT_SUPPORT=y
 CONFIG_MMC_MSM_SDC4_SUPPORT=y
+CONFIG_MMC_MSM_SDC5_SUPPORT=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_PMIC8058=y
 CONFIG_LEDS_AS3676_SEMC=y
