--- a/arch/arm/configs/fuji_hikari_defconfig
+++ b/arch/arm/configs/fuji_hikari_defconfig
@@ -357,7 +357,8 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MSM is not set
 CONFIG_BATTERY_BQ27520_SEMC=y
 CONFIG_BATTERY_BQ27520_SEAL_FW=y
-CONFIG_CHARGER_BQ24185=y
+CONFIG_SEMC_CHARGER_CRADLE_ARCH=y
+CONFIG_CHARGER_BQ24160=y
 CONFIG_BATTERY_CHARGALG=y
 CONFIG_BATTERY_SEMC_ARCH=y
 CONFIG_SENSORS_MSM_ADC=y
@@ -418,8 +419,7 @@ CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
 CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
-CONFIG_FB_MSM_MIPI_R63306_PANEL_TMD_MDV20=y
-CONFIG_FB_MSM_MIPI_R63306_PANEL_SHARP_LS043K3SX01F=y
+CONFIG_FB_MSM_MIPI_R63306_PANEL_TMD_MDV22=y
 CONFIG_FB_MSM_HDMI_MSM_PANEL=y
 CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT=y
 CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT=y
@@ -507,6 +507,7 @@ CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CSVT=y
 CONFIG_USB_EHSET_TEST_FIXTURE=y
+CONFIG_USB_NCP373=y
 CONFIG_USB_GADGET=y
 CONFIG_SUPPORT_ALIEN_USB_CHARGER=y
 CONFIG_USB_MSM_72K=y
@@ -528,6 +529,8 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_MSM=y
 CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT=y
 # CONFIG_MMC_MSM_SDC2_SUPPORT is not set
+CONFIG_MMC_MSM_SDC3_SUPPORT=y
+CONFIG_MMC_MSM_SDC3_8_BIT_SUPPORT=y
 CONFIG_MMC_MSM_SDC4_SUPPORT=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_PMIC8058=y
