--- a/drivers/video/msm/Makefile
+++ b/drivers/video/msm/Makefile
@@ -10,7 +10,7 @@ ifeq ($(CONFIG_FB_MSM_MDP_HW),y)
 # MDP
 obj-y += mdp.o
 
-obj-$(CONFIG_DEBUG_FS) += mdp_debugfs.o
+obj-$(CONFIG_MDP_DEBUG_FS) += mdp_debugfs.o
 obj-$(CONFIG_FB_MSM_MDP_LUT) += mdp_kcal_ctrl.o
 
 ifeq ($(CONFIG_FB_MSM_MDP40),y)
