--- a/drivers/video/msm/Makefile
+++ b/drivers/video/msm/Makefile
@@ -11,6 +11,7 @@ ifeq ($(CONFIG_FB_MSM_MDP_HW),y)
 obj-y += mdp.o
 
 obj-$(CONFIG_DEBUG_FS) += mdp_debugfs.o
+obj-$(CONFIG_FB_MSM_MDP_LUT) += mdp_kcal_ctrl.o
 
 ifeq ($(CONFIG_FB_MSM_MDP40),y)
 obj-y += mdp4_util.o
