--- a/arch/arm/configs/fuji_hikari_defconfig
+++ b/arch/arm/configs/fuji_hikari_defconfig
@@ -95,6 +95,7 @@ CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_CP_ACCESS=y
 CONFIG_CMDLINE="rdinit=/init.sh init=/init androidboot.hardware=semc androidboot.baseband=msm"
 CONFIG_CMDLINE_EXTEND=y
+CONFIG_SECCOMP=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
