defconfig: nozomi/hikari: Enable CONFIG_CRYPTO_SHA512

--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -605,6 +605,7 @@ CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 # CONFIG_CRYPTO_HW is not set
 CONFIG_CRYPTO_AES_ARM=y
+CONFIG_CRYPTO_SHA512=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_GPU_VOLTAGE_TABLE=y
