--- a/arch/arm/configs/fuji_nozomi_defconfig
+++ b/arch/arm/configs/fuji_nozomi_defconfig
@@ -93,7 +93,7 @@ CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_CP_ACCESS=y
-CONFIG_CMDLINE="rdinit=/init.sh init=/init androidboot.hardware=semc androidboot.baseband=msm androidboot.selinux=permissive"
+CONFIG_CMDLINE="rdinit=/init.sh init=/init androidboot.hardware=semc androidboot.baseband=msm"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_SECCOMP=y
 CONFIG_CPU_FREQ=y
