--- a/arch/arm/configs/fuji_hikari_defconfig
+++ b/arch/arm/configs/fuji_hikari_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-oreo-oc"
+CONFIG_LOCALVERSION="-oc"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
